# MPNA

./: .gitignore  README.md
01-matrix-matrix/: README.md  README_origin.md
01-matrix-matrix/exo1-3/: data.txt  main.c  plot_script.gnu
01-matrix-matrix/exo4/: a.out  data.txt  main.c
01-matrix-matrix/exo4/build-debug/: CMakeCache.txt
01-matrix-matrix/exo5/: a.out  main.c
01-matrix-matrix/exo5/build-debug/: Makefile  cmake_install.cmake
02-iterative-relaxation/: CMakeLists.txt  README.md  main.cpp
02-iterative-relaxation/include/: ArgumentParser.h  Benchmark.h  CSRMatrix.h  Solver.h  Utils.h
02-iterative-relaxation/src/: ArgumentParser.cpp  Benchmark.cpp  ConjugateGradient.cpp  GMRES.cpp  GaussSeidel.cpp  Jacobi.cpp  Utils.cpp
03-sparse-matvec/: CMakeLists.txt  README.md  main.cpp
03-sparse-matvec/include/: ArgumentParser.h  CSRMatrix.h  MatrixVector.h  Utils.h
03-sparse-matvec/input/: example.mtx
03-sparse-matvec/src/: ArgumentParser.cpp  MatrixVector.cpp  Utils.cpp
04-nonlinear/: .gitignore  CMakeLists.txt  Makefile  README.md  linear_diffusion  main.cpp
04-nonlinear/include/: HypreInterface.h  MatrixBuilder.h  Solver.h
04-nonlinear/src/: HypreInterface.cpp  MatrixBuilder.cpp  Solver.cpp  main.cpp
